unpackaged/main/default/objects/Brightcove_Invoice__c/Brightcove_Invoice__c.object-meta.xml
<CustomObject>
    <label>Brightcove Invoice</label>
    <nameField>
        <label>Brightcove Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brightcove Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>