unpackaged/main/default/objects/Brightcove_Invoice__c/fields/Account_Name_Description__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Description__c</fullName>
    <label>Account Name Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>