unpackaged/main/default/objects/Brightcove_Invoice__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <label>AccountName</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Brightcove Invoices</relationshipLabel>
    <relationshipName>Brightcove_Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>