unpackaged/main/default/objects/Brightcove_Invoice__c/fields/Days_Deliquent__c.field-meta.xml
<CustomField>
    <fullName>Days_Deliquent__c</fullName>
    <description>I know that &quot;Delinquent&quot; is misspelled here. This is just the latest entry in the book of sin that has been started for the Fusion project. Instead of correcting the typo, we&#39;re just making sure that it&#39;s wrong in both places.  Another part of me has died today, and it&#39;s not even 9 am.</description>
    <label>Days Deliquent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>