unpackaged/main/default/objects/Brightcove_Invoice__c/fields/Party_Number__c.field-meta.xml
<CustomField>
    <fullName>Party_Number__c</fullName>
    <label>Party Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>