unpackaged/main/default/objects/Brightcove_Invoice__c/fields/Transaction_Currency__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Currency__c</fullName>
    <label>Transaction Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>