unpackaged/main/default/objects/Brightcove_Invoice__c/fields/Transaction_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Due_Date__c</fullName>
    <label>Transaction Due Date</label>
    <type>DateTime</type>
</CustomField>