unpackaged/main/default/objects/Brightcove_Invoice__c/fields/Transaction_Number__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Number__c</fullName>
    <externalId>true</externalId>
    <label>Transaction Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>