unpackaged/main/default/objects/Brightcove_Invoice__c/fields/Transaction_Number_Text__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Number_Text__c</fullName>
    <formula>TEXT(Transaction_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Number (Text)</label>
    <type>Text</type>
</CustomField>