unpackaged/main/default/objects/Brightcove_Invoice__c/fields/Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Status__c</fullName>
    <label>Transaction Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>